# kbtg-ai-workshop-oct

./: Readme.md  llms.txt
workshop-1/: index.html
workshop-3/: prompt.md
workshop-3/example-result/: package-lock.json  package.json
workshop-3/example-result/src/: App.jsx
workshop-3/example-result/src/components/: Payment.jsx  Payment.stories.js
workshop-3/simple-app/: package-lock.json  package.json
workshop-3/simple-app/src/: App.jsx
workshop-3/simple-app/src/components/: Payment.jsx
workshop-3/specs/components/: Payment.vue
workshop-4/: entities.md  prompt.md  task.md
workshop-4/example-result/: CLEAN_ARCHITECTURE.md  README.md  database.md  go.mod  main.go  result.md  test_api.sh  test_transfer_api.sh  users.db
workshop-4/example-result/internal/domain/: user.go
workshop-4/simple-app/: Cargo.toml  README.md  database.md  todo.md  users.db
workshop-4/simple-app/doc/: result.yml
workshop-4/simple-app/src/: main.rs
workshop-4/simple-app/src/application/: mod.rs  transfer_service.rs  user_service.rs
workshop-4/simple-app/src/domain/: mod.rs  point_ledger.rs  repository.rs  transfer.rs  user.rs
workshop-4/simple-app/src/infrastructure/: mod.rs  repository.rs  transfer_repository.rs
workshop-4/simple-app/src/presentation/: handlers.rs  mod.rs  routes.rs  transfer_handlers.rs
workshop-4/specs/: transfer.yml
workshop-5/: prompt.md
workshop-6/: prompt.md
workshop-6/.github/: copilot-instruction.md
workshop-6/.github/chatmodes/: db-helper.chatmode.md
workshop-6/scripts/: README.md  count_users.sh  seed_users.sh  users_data.csv
(+10 files in other folders)
